[package]
name = "kat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["string"] }
dirs = "6.0.0"
env_logger = "0.11.6"
eyre = "0.6.12"
globset = "0.4.15"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
